boost.log
*** Error compiling 'boost/libs/python/config/tools/libs.py'...
  File "boost/libs/python/config/tools/libs.py", line 56
    raise SCons.Errors.UserError, "cannot overwrite non-directory `%s' with a directory `%s'" % (str(dest), str(source))
                                ^
SyntaxError: invalid syntax

